Closed Bug 373433 Opened 19 years ago Closed 19 years ago

Input content hidden when input field is nested in absolute positioned element

Categories

(Core :: Layout: Form Controls, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: phiw2, Assigned: sharparrow1)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

Attached file minimal test case
Input text field is nested in an absolute positioned element, positioned based on top and right co-ordinates. The pre-filed value (content) and the caret are invisible until the user actually starts typing. view test case (from bug 373180) in url field. The word 'needle' should be visible. Sometimes onload part of the string is visible. Regressed between 20070226 and 20070227 fails with Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a3pre) Gecko/20070227 Minefield/3.0a3pre ID:2007022704 [cairo]. http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2007-02-26+03%3A00%3A00&maxdate=2007-02-27+04%3A00%3A00&cvsroot=%2Fcvsroot --> bug 371536 is the most likely candidate
It looks like the input's scroll view isn't getting positioned correctly for some reason. I'll look into it later.
Assignee: nobody → sharparrow1
OS: Mac OS X → All
Hardware: Macintosh → All
The tabs on info pages on wowhead.com under "Related" (e.g. http://www.wowhead.com/?item=28555) don't show up. They show fine in the 20070226 Camino trunk build, but not the 20070227 build. Seems to be a similar case; an absolutely-positioned parent is involved here too.
(In reply to comment #2) > The tabs on info pages on wowhead.com under "Related" (e.g. > http://www.wowhead.com/?item=28555) don't show up. They show fine in the > 20070226 Camino trunk build, but not the 20070227 build. Seems to be a similar > case; an absolutely-positioned parent is involved here too. > Wow, that is a complicated construction. position: absolute is involved, but also 'overflow:hidden' combined with 'float:left;' on a deeply nested element. The combination of the last two seems to cause the construction to collapse completely. Or cause all content from the (outer) absolute positioned block to vanish.
As far as I could tell, it's simply mispositioned; finding the right element through JS and messing with "top" or "bottom" can allow the content to be seen. (And here I was hoping I wouldn't have to make a reduced testcase for this. ;) )
Attached patch PatchSplinter Review
One of those requirements it's easy to miss: in addition to invalidation, repositioning child views is required when repositioning a frame.
Attachment #259832 - Flags: review?(roc)
Checked in with simple reftest.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
verified with Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a4pre) Gecko/20070328 Minefield/3.0a4pre ID:2007032802 [cairo]
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: