Bug 373433: views inside absolutely positioned blocks sometimes mispositioned. r+sr=roc.